--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/4_ramen/4_32.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/4_ramen/4_32.yaml
@@ -62,13 +62,24 @@ step_annotations:
   step_id: 42
 - description: Stir-Stir noodles with a spoon or fork until the flavouring dissolves
   end_time: 750.683
+  errors:
+  - description: Stir it faster such that water spills out of the bowl
+    tag: Technique Error
   start_time: 726.3988291414752
   step_id: 43
 - description: slice-slice 1/4 medium onion into pieces
   end_time: -1.0
+  errors:
+  - description: Missed this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 46
 - description: Add-Add basil to the bowl
   end_time: -1.0
+  errors:
+  - description: Missed this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 50
