--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/29_capresebruschetta/29_37.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/29_capresebruschetta/29_37.yaml
@@ -14,13 +14,11 @@ step_annotations:
     until lightly charred and crispy and transfer the slices to a plate
   end_time: 338.8792951552416
   errors:
-  - description: more than 3 mins
+  - description: Toasting for more than 3 minutes
     tag: Timing Error
-  - description: temperature too high
+  - description: Toast on high temperature to make it scorched
     tag: Temperature Error
-  - description: scorched
-    tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before brushing with olive oil
     tag: Order Error
   start_time: 145.69476234885065
   step_id: 352
@@ -31,7 +29,7 @@ step_annotations:
 - description: Brush-Brush 2 slices of baguette with olive oil on both sides
   end_time: 467.21228266965255
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after toasting
     tag: Order Error
   start_time: 406.92774760950226
   step_id: 349
@@ -41,9 +39,6 @@ step_annotations:
   step_id: 347
 - description: Cut-Cut 1/4 cup of cherry tomatoes into halves
   end_time: 632.5380530618831
-  errors:
-  - description: Step performed after correct order
-    tag: Order Error
   start_time: 531.1504259152666
   step_id: 350
 - description: add-In a bowl, add the cut cherry tomatoes
@@ -53,18 +48,22 @@ step_annotations:
 - description: Combine-Combine the contents of the bowl
   end_time: 671.3576400324346
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding salt to the bowl
     tag: Order Error
   start_time: 655.829805244214
   step_id: 348
 - description: add-1/4 tsp pepper to a bowl
   end_time: 728.894833
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after combining
     tag: Order Error
   start_time: 687.342175843838
   step_id: 346
 - description: Spoon-Spoon the mixture from the bowl onto the bread
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 345
