--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/29_capresebruschetta/29_48.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/29_capresebruschetta/29_48.yaml
@@ -5,19 +5,21 @@ step_annotations:
 - description: Cut-Cut 1/4 cup of cherry tomatoes into halves
   end_time: 108.47967756382167
   errors:
-  - description: Slice instead of cut
-    tag: Technique Error
-  modified_description: Slice-Slice 1/4 cup of cherry tomatoes into halves
+  - description: Using normal tomatoes instead of cherry tomatoes
+    tag: Preparation Error
   start_time: 0.7312472386336936
   step_id: 350
 - description: Slice-Slice two 1/2 inch thick rounds from a baguette (slice slanted)
   end_time: 143.30745302246828
+  errors:
+  - description: Do not slice the baguette slanted
+    tag: Technique Error
   start_time: 110.29362420229285
   step_id: 344
 - description: add-1/16 cup basil to a bowl
   end_time: 190.83285495041312
   errors:
-  - description: Added more basil than specified
+  - description: Added 1/4 cup basil instead of 1/16 cup basil
     tag: Measurement Error
   modified_description: add-1/4 cup basil to a bowl
   start_time: 144.75861033324523
@@ -26,12 +28,12 @@ step_annotations:
     until lightly charred and crispy and transfer the slices to a plate
   end_time: 329.7811674573054
   errors:
-  - description: Toasted for less time than specified
+  - description: Toasted for 1 minute instead of 2 to 3 minutes
     tag: Timing Error
-  - description: Used under heated pan
-    tag: Temperature Error
-  - description: Step performed before correct order
+  - description: Step performed before brushing the bread with olive oil
     tag: Order Error
+  - description: Toasted on low heat
+    tag: Temperature Error
   modified_description: Toast-Toast both sides of the slices on the pan for 1 minute
     on low heat
   start_time: 192.64680158888433
@@ -39,7 +41,7 @@ step_annotations:
 - description: add-1/8 cup shredded mozzarella to a bowl
   end_time: 361.34383896670386
   errors:
-  - description: Spill while adding
+  - description: Spill while adding mozzarella to a bowl
     tag: Technique Error
   modified_description: add-1/8 cup shredded mozzarella to a bowl, but spill
   start_time: 335.94858602810734
@@ -57,30 +59,24 @@ step_annotations:
   errors:
   - description: Used sesame oil instead of olive oil
     tag: Preparation Error
+  - description: Step performed after toasting the bread
+    tag: Order Error
   modified_description: Brush-Brush 2 slices of baguette with sesame oil on both sides
   start_time: 429.1854432455259
   step_id: 349
 - description: add-1/4 tsp pepper to a bowl
   end_time: 491.94799693662867
-  errors:
-  - description: Step performed after correct order
-    tag: Order Error
   start_time: 475.9852665180823
   step_id: 346
 - description: Combine-Combine the contents of the bowl
   end_time: 508.9990953382577
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 495.575890213571
   step_id: 348
 - description: Spoon-Spoon the mixture from the bowl onto the bread
-  end_time: -1.0
+  end_time: 575
   errors:
   - description: Spill while spooning the mixture from bowl onto the bread
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Spoon-Spoon the mixture from the bowl onto the bread but spill
-  start_time: -1.0
+  start_time: 550
   step_id: 345
